SCRUM 51: Create CRUD for newly created tables