@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import com.edziennikarze.gradebook.config.PostgresTestContainerConfig;
 import com.edziennikarze.gradebook.subject.utils.SubjectTestDatabaseCleaner;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,6 +13,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.testcontainers.context.ImportTestcontainers;
 import org.springframework.test.context.ActiveProfiles;
+
 import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
@@ -19,10 +21,7 @@ import java.util.List;
 import java.util.UUID;
 
 @ActiveProfiles("test")
-@SpringBootTest(
-        webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT,
-        properties = "server.port=0"
-)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, properties = "server.port=0")
 @ImportTestcontainers(PostgresTestContainerConfig.class)
 public class SubjectControllerIntTest {
 
@@ -39,11 +38,7 @@ public class SubjectControllerIntTest {
 
     @BeforeEach
     public void setUp() {
-        subjects = List.of(
-                buildSubject("Matematyka"),
-                buildSubject("Fizyka"),
-                buildSubject("J. Polski")
-        );
+        subjects = List.of(buildSubject("Matematyka"), buildSubject("Fizyka"), buildSubject("J. Polski"));
     }
 
     @AfterEach
@@ -67,17 +62,16 @@ public class SubjectControllerIntTest {
     }
 
     @Test
-    void shouldGetAllSubjects(){
+    void shouldGetAllSubjects() {
         // given
-        subjects.forEach(subject -> subjectRepository.save(subject).block());
-
+        subjectRepository.saveAll(subjects)
+                .collectList()
+                .block();
 
         // when
         List<Subject> retrievedSubjects = subjectController.getAllSubjects()
                 .collectList()
                 .block();
-
-        System.out.println(subjects.size());
 
         // then
         assertNotNull(retrievedSubjects);
@@ -88,15 +82,22 @@ public class SubjectControllerIntTest {
     void shouldDeleteSubjectByUUID() {
         // given
         List<Subject> savedSubjects = subjects.stream()
-                .map(subject -> subjectRepository.save(subject).block())
+                .map(subject -> subjectRepository.save(subject)
+                        .block())
                 .toList();
-        UUID subjectIdToDelete = savedSubjects.get(0).getId();
+        UUID subjectIdToDelete = savedSubjects.getFirst()
+                .getId();
 
         // when
-        subjectController.deleteSubject(subjectIdToDelete).block();
+        subjectController.deleteSubject(subjectIdToDelete)
+                .block();
 
         // then
-        assertFalse(subjectRepository.existsById(subjectIdToDelete).block());
-        assertEquals(subjects.size() - 1, subjectRepository.findAll().count().block());
+        assertFalse(subjectRepository.existsById(subjectIdToDelete)
+                .block());
+        assertEquals(subjects.size() - 1,
+                subjectRepository.findAll()
+                        .count()
+                        .block());
     }
 }
